# SpatialMETA

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
benchmark/: Visualization_cross_modality_benchamrk.ipynb  Visualization_cross_modality_benchmark.ipynb  Visualization_cross_sample_benchamrk.ipynb  Visualization_cross_sample_benchmark.ipynb  benchmark_functions_integration.py  multi_benmark_function.py
docs/: build.sh  requirements.txt
docs/docs/: requirements.txt
docs/docs/source/: index.rst  install.rst
docs/docs/source/_static/css/: style.css
docs/docs/source/notebooks/: Alignment.ipynb  Analysis.ipynb  Horizontal_Integration_for_SM.ipynb  Horizontal_Integration_for_ST_SM.ipynb  Reassignment.ipynb  Vertical_Integration_for_SM_ST.ipynb
docs/source/: api.rst  conf.py  index.rst  install.rst  tutorial.rst
docs/source/notebooks/: Alignment.ipynb  Analysis.ipynb  Horizontal_Integration_for_ST_SM.ipynb  Preprocess.ipynb  Reassignment.ipynb  Vertical_Integration_for_SM_ST.ipynb  Vertical_and_Horizontal_Integration_for_ST_SM.ipynb
spatialmeta/: _version.py  environment.cpu.yml  environment.yml  requirements.txt  requirements_cpu.txt
spatialmeta-0.1.0.dist-info/: METADATA  RECORD
spatialmeta/deprecated/: _aeatt.py  _aeatt2.py  _alignment_model_vq.py  _att.py  _att2.py  _att3.py  _att4.py  _baseVAE.py  _bertmodel.py  _model_backup.py  _moe.py  _moe_z.py  _simulatemodel.py  _vqvaemodel.py
spatialmeta_tutorial/: Alignment.ipynb  Analysis.ipynb  Horizontal_Integration_for_ST_SM.ipynb  Preprocess.ipynb  Reassignment.ipynb  Vertical_Integration_for_SM_ST.ipynb  Vertical_and_Horizontal_Integration_for_ST_SM.ipynb
spatialtk/: __init__.py
spatialtk/model/: .__model.py  .__simulatemodel.py  _alignment.py  _model.py  _primitives.py  _simulatemodel.py
