[project]
name = "spatialmeta"
version = "0.1.0"
description = "spatialMETA: a deep learning framework for spatial multiomics"
authors = [
    {name = "Ruonan Tian", email = "ruonan.23@intl.zju.edu.cn"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
keywords = ["spatial", "multiomics", "deep learning", "transcriptomics", "metabolomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "adjusttext>=1.3.0",
    "anndata>=0.12.2",
    "biopython>=1.85",
    "colour>=0.1.5",
    "dash-bootstrap-components>=2.0.4",
    "dash-daq>=0.6.0",
    "einops>=0.8.1",
    "elasticdeform>=0.5.1",
    "intervaltree>=3.1.0",
    "kornia>=0.8.1",
    "leidenalg>=0.10.2",
    "matplotlib>=3.10.6",
    "molmass>=2025.9.4",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyimzml>=1.5.5",
    "python-dotplot>=0.0.1",
    "scanpy>=1.11.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "svgpathtools>=1.7.1",
    "tifffile>=2025.9.20",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "diffusers>=0.35.1",
    "gradio>=5.46.1",
    "nbsphinx>=0.9.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-hoverxref>=1.4.2",
    "sphinx-rtd-theme>=3.0.2",
    "transformers>=4.56.2",
]
