[project]
name = "spatialmeta"
version = "0.1.0"
description = "spatialMETA: a deep learning framework for spatial multiomics"
authors = [
    {name = "Ruonan Tian", email = "ruonan.23@intl.zju.edu.cn"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
keywords = ["spatial", "multiomics", "deep learning", "transcriptomics", "metabolomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "adjusttext>=1.1.0",
    "anndata>=0.8.0",
    "biopython>=1.79",
    "colour>=0.1.5",
    "dash-bootstrap-components>=1.5.0",
    "dash-daq>=0.5.0",
    "einops>=0.4.1",
    "elasticdeform>=0.5.0",
    "intervaltree>=3.1.0",
    "kornia>=0.7.0",
    "leidenalg>=0.8.0",
    "matplotlib>=3.5.0",
    "molmass>=2020.0.0",
    "numba>=0.57.0",
    "numpy>=1.21.0",
    "pandas>=1.4.0",
    "plotly>=5.10.0",
    "pyimzml>=1.5.0",
    "python-dotplot>=0.0.1",
    "scanpy>=1.8.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.10.0",
    "seaborn>=0.11.0",
    "shapely>=2.0.0",
    "svgpathtools>=1.6.0",
    "tifffile>=2020.0.0",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "umap-learn>=0.5.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "nbsphinx>=0.9.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-hoverxref>=1.4.2",
    "sphinx-rtd-theme>=3.0.2",
    # Modern dependencies (Python 3.10+)
    "diffusers>=0.35.1; python_version >= '3.10'",
    "gradio>=5.46.1; python_version >= '3.10'",
    "transformers>=4.56.2; python_version >= '3.10'",
    # Fallback for older Python versions
    "transformers>=4.21.0; python_version < '3.10'",
]
# Latest versions for users who want cutting-edge features (Python 3.11+)
latest = [
    "anndata>=0.12.2; python_version >= '3.11'",
    "scanpy>=1.11.4; python_version >= '3.11'",
    "pandas>=2.3.2; python_version >= '3.11'",
    "numpy>=2.3.3; python_version >= '3.11'",
    "scipy>=1.16.2; python_version >= '3.11'",
    "scikit-learn>=1.7.2; python_version >= '3.11'",
    "torch>=2.8.0; python_version >= '3.11'",
    "torchvision>=0.23.0; python_version >= '3.11'",
    "transformers>=4.56.2; python_version >= '3.11'",
    "diffusers>=0.35.1; python_version >= '3.11'",
    "gradio>=5.46.1; python_version >= '3.11'",
    # Fallback to compatible versions for Python 3.9-3.10
    "anndata>=0.8.0; python_version < '3.11'",
    "scanpy>=1.8.0; python_version < '3.11'",
    "pandas>=1.4.0; python_version < '3.11'",
    "numpy>=1.21.0; python_version < '3.11'",
    "scipy>=1.10.0; python_version < '3.11'",
    "scikit-learn>=1.0.0; python_version < '3.11'",
    "torch>=1.13.0; python_version < '3.11'",
    "torchvision>=0.14.0; python_version < '3.11'",
]
# Minimal installation for basic functionality
minimal = [
    "anndata>=0.8.0",
    "scanpy>=1.8.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
]
